# best_realty_photo_bank

./: .gitignore  Help.md  Readme.md  docker-compose.yaml  pyproject.toml
project-application/: .env.template  main.py
project-application/alembic/: env.py
project-application/alembic/versions/: 2024_11_19_2226-0a4ff8ecaf9e_create_users_table.py  2025_04_10_2302-422752e32a2f_create_tg_users_table.py  2025_04_16_1524-ef1356db7294_create_images_table.py  2025_04_17_2121-a0e8f238caf5_removed_file_id_from_image_model.py  2025_04_22_2223-c51fff197b82_add_tg_file_id_to_image.py  2025_04_23_2317-db4121f8040d_add_booking_fields_to_image_table.py  2025_05_17_2026-1ceb1de8a9f5_add_new_user_role_settings.py  2025_05_23_0958-e36a247c3637_add_is_admin_flag_to_user.py  2025_05_26_1654-48c7318df15e_add_calceulated_hash_for_image.py  2025_05_28_1536-a39ecf8bda09_old_fix.py  2025_05_28_1728-fd1a72b3c5e4_hot_fix.py  2025_05_28_1759-dffae8836b55_fix_sqlite_troubles.py  2025_05_28_2018-274db1b6d92a_add_categories_table.py  2025_05_28_2112-c4a49842eb2f_add_category_is_active_flag.py  2025_05_29_1515-9e7369ac1ca6_add_category_to_images.py
project-application/api/: __init__.py
project-application/api/api_v1/: __init__.py  users.py
project-application/api/crud/: categories.py  filter.py  images.py  users.py
project-application/bot/: best_realty_photobank_bot.service  main.py  state.py
project-application/core/: config.py
project-application/utils/: logger.py  templates.py
project-application/web_app/: best_realty_photobank_webapp.service  error_handlers.py  main.py  routes.py
(+60 files in other folders)
