[tool.poetry]
name = "FastApiboilerplate"
version = "0.1.0"
description = ""
authors = ["a.groza <a.groza.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.1"
